<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">


        <androidx.cardview.widget.CardView
            android:id="@+id/layout_top"

            android:orientation="horizontal"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="25dp"
            app:cardElevation="0dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1.5:1">

            <ImageView
                android:id="@+id/ivPizzaItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/pizza_prew"
                android:contentDescription="@string/cart"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/btnFragmentImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:background="@drawable/shape_buttons"
            android:orientation="horizontal"
            android:layout_marginBottom="26dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="19dp"
                android:layout_marginStart="23dp"
                android:layout_weight="1"
                android:fontFamily="@font/lato_bold"
                android:text="@string/add_to_card"
                android:textColor="@color/black_main"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pricePizzaItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="23dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/_900"
                android:textColor="@color/black_main"
                android:textSize="18sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>