<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CartFragment">

        <TextView
            android:id="@+id/tvCartFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bottom_sheet"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="181dp">

            <LinearLayout
                android:id="@+id/btnFragmentCart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="26dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_buttons"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="19dp"
                    android:layout_marginStart="23dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/place_order"
                    android:textColor="@color/black_main"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pricePizzaCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="23dp"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/_900"
                    android:textColor="@color/black_main"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>