<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="28dp">

    <View
        android:id="@+id/LineSheet"
        android:layout_width="60dp"
        android:layout_height="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_line_sheet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintDimensionRatio="4:2.3"
        app:layout_constraintTop_toTopOf="@id/LineSheet"
        app:layout_constraintVertical_bias="0.27">

        <ImageView
            android:id="@+id/ivPizzaSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cart"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/pizza_prew" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/layout_collapsed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_top">

        <TextView
            android:id="@+id/tvPizzaName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lato_bold"
            android:gravity="left"
            android:text="@string/_900"
            android:textColor="@color/black_main"
            android:textSize="36sp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_expanded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_collapsed">

        <TextView
            android:id="@+id/descriptionPizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:fontFamily="@font/lato"
            android:gravity="fill_horizontal"
            tools:text="@tools:sample/lorem/random"
            tools:lines="6"
            android:text="@string/item_description"
            android:textColor="@color/black_main"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>